--- a/FTPSearch/App.config
+++ b/FTPSearch/App.config
@@ -4,9 +4,15 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <appSettings>
-    <add key="Excel" value="C:\Trabajo\Nugets.xlsx" />
+    <add key="Excel" value="C:\Trabajo\TSLOperaciones\SeguridadWebUi.xlsx" />
+    <add key="ExcelWriteFile" value="C:\Trabajo\TSLOperaciones\ftp.xlsx" />
     <add key="JsonFile" value="C:\Trabajo\FTPSearchpath.txt" />
-    <add key="JiraEndPoint" value="http://localhost:61045/V1/Jira/GetApplicationsCMDBInfo" />
+    <add key="JiraEndPoint" value="http://localhost:61045/v1/Jira/CreateTickets" />
+    <add key="JiraTicketsReporterEndPoint" value="http://localhost:61045/v1/Jira/GetReporterTickets" />
+    
     <add key="RootDirectoryToExplore" value="d:\PruebaDir" />
+    <add key="JsonListFile" value="C:\Users\mapoza\Desktop\ReporteSalida\lanzar.json" />
+    
   </appSettings>
 </configuration>
+
