--- a/FTPSearch/App.config
+++ b/FTPSearch/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <appSettings>
-    <add key="Excel" value="C:\Trabajo\TSLOperaciones\SeguridadWebUi.xlsx" />
+    <add key="Excel" value="C:\Trabajo\TSLOperaciones\tsl.xlsx" />
     <add key="ExcelWriteFile" value="C:\Trabajo\TSLOperaciones\ftp.xlsx" />
     <add key="JsonFile" value="C:\Trabajo\FTPSearchpath.txt" />
     <add key="JiraEndPoint" value="http://localhost:61045/v1/Jira/CreateTickets" />
