--- a/FTPSearch/App.config
+++ b/FTPSearch/App.config
@@ -4,15 +4,25 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <appSettings>
-    <add key="Excel" value="C:\Trabajo\TSLOperaciones\tsl.xlsx" />
+    <add key="TlsExcelFile" value="C:\TasksFolder\tlsexcelfile.xlsx" />
+    <add key="UpdateComponetsExcelFile" value="C:\TasksFolder\ListadoComponentes.xlsx" />
+    
     <add key="ExcelWriteFile" value="C:\Trabajo\TSLOperaciones\ftp.xlsx" />
-    <add key="JsonFile" value="C:\Trabajo\FTPSearchpath.txt" />
+    
+    <add key="JsonTlsWithOutTeamFile" value="C:\TasksFolder\TlsWithOutTeam.json" />
+    <add key="WorkSpace" value="C:\TasksFolder\" />
+    
+    
+    
+    
     <add key="JiraEndPoint" value="http://localhost:61045/v1/Jira/CreateTickets" />
     <add key="JiraTicketsReporterEndPoint" value="http://localhost:61045/v1/Jira/GetReporterTickets" />
+    <add key="JiraTicketsCMDBInfoEndPoint" value="http://localhost:61045/v1/Jira/GetApplicationsCMDBInfo" />
     
     <add key="RootDirectoryToExplore" value="d:\PruebaDir" />
-    <add key="JsonListFile" value="C:\Users\mapoza\Desktop\ReporteSalida\lanzar.json" />
+    <add key="JsonPath" value="C:\Trabajo\" />
     
   </appSettings>
 </configuration>
+
 
