Refactorización-En Proceso

--- a/FTPSearch/App.config
+++ b/FTPSearch/App.config
@@ -5,6 +5,9 @@
     </startup>
   <appSettings>
     <add key="TlsExcelFile" value="C:\TasksFolder\tlsexcelfile.xlsx" />
+    <add key="InstalTasklingExcelFile" value="C:\TasksFolder\installtasklingexcelfile.xlsx" />
+
+
     <add key="UpdateComponetsExcelFile" value="C:\TasksFolder\ListadoComponentes.xlsx" />
     
     <add key="ExcelWriteFile" value="C:\Trabajo\TSLOperaciones\ftp.xlsx" />
