Añadidas querys masivas

--- a/FTPSearch/App.config
+++ b/FTPSearch/App.config
@@ -6,7 +6,10 @@
   <appSettings>
     <add key="TlsExcelFile" value="C:\TasksFolder\tlsexcelfile.xlsx" />
     <add key="InstalTasklingExcelFile" value="C:\TasksFolder\installtasklingexcelfile.xlsx" />
-
+    <add key="UpdateTasklingExcelFile" value="C:\TasksFolder\updatetasklingexcelfile.xlsx" />
+    <add key="Appfabricexcelfile" value="C:\TasksFolder\appfabricexcelfile.xlsx" />
+    <add key="UpdatePoolexcelfile" value="C:\TasksFolder\updatePoolexcelfile.xlsx" />
+    <add key="DataBasePoolexcelfile" value="C:\TasksFolder\dataBaseexcelfile.xlsx" />
 
     <add key="UpdateComponetsExcelFile" value="C:\TasksFolder\ListadoComponentes.xlsx" />
     
