Proceso semiautomático implementado.

--- a/FTPSearch/ListTools.csproj
+++ b/FTPSearch/ListTools.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Contracts\IFileManagementService.cs" />
     <Compile Include="DTO\AutomatizaDTO.cs" />
     <Compile Include="DTO\MatchDTO.cs" />
+    <Compile Include="DTO\ResultModel.cs" />
     <Compile Include="DTO\TareaDTO.cs" />
     <Compile Include="DTO\TaskModelData.cs" />
     <Compile Include="DTO\TslData.cs" />
