Agreagar método para usar endpoint CreateTickets de JiraTickets.

--- a/FTPSearch/App.config
+++ b/FTPSearch/App.config
@@ -24,7 +24,10 @@
     <add key="JiraEndPoint" value="http://localhost:61045/v1/Jira/CreateTickets" />
     <add key="JiraTicketsReporterEndPoint" value="http://localhost:61045/v1/Jira/GetReporterTickets" />
     <add key="JiraTicketsCMDBInfoEndPoint" value="http://localhost:61045/v1/Jira/GetApplicationsCMDBInfo" />
+    <add key="JiraCreateTicketsEndPoint" value="http://localhost:61045/v1/Jira/CreateTickets" />
+
     
+
     <add key="RootDirectoryToExplore" value="d:\PruebaDir" />
     <add key="JsonPath" value="C:\Trabajo\" />
     
