--- a/FTPSearch/VY.AutomatedTools.csproj
+++ b/FTPSearch/VY.AutomatedTools.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3CEEFB1C-238C-43F4-8D1B-2B2058965E4D}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>FTPSearch</RootNamespace>
-    <AssemblyName>FTPSearch</AssemblyName>
+    <RootNamespace>VY.AutomatedTools</RootNamespace>
+    <AssemblyName>VY.AutomatedTools</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
